Fixed alignments

--- a/SERVER CODINGS/FRONT END/smiff/src/app/dashboard/dashboard.component.css
+++ b/SERVER CODINGS/FRONT END/smiff/src/app/dashboard/dashboard.component.css
@@ -85,6 +85,7 @@
   position: relative;
   background: #f5f5f5;
   min-height: 100vh;
+  height: 100%;
   transition: all 0.5s ease;
 }
 .lefttake{
@@ -107,10 +108,10 @@
   display: flex;
   align-items: center;
   position: fixed;
-  width: fit-content;
+  width: 100%;
   z-index: 100;
   padding: 0 20px;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
   transition: all 0.5s ease;
 }
 
@@ -194,16 +195,18 @@ nav .profile-details i{
 .home-content .overview-boxes{
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  justify-content: space-evenly;
+  flex-wrap: nowrap;
   padding: 0 20px;
   margin-bottom: 26px;
+  padding-left: 300px;
+  width: 1500px;
 }
 .overview-boxes .box{
   display: flex;
   align-items: center;
   justify-content: center;
-  width: calc(100% / 4 - 15px);
+  width: fit-content;
   background: #fff;
   padding: 15px 14px;
   border-radius: 12px;
